# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  pyproject.toml  run_pytest.sh
.build/: git_update.sh
.cpa/: flake8.cfg
.github/workflows/: ci.yaml  main.yaml
.notes/: INFRA.md  infrastructure.md
legacy/interview_analyzer/: app_lifespan_management.py  main.py
legacy/interview_analyzer/utils/: files.py  standard_logger.py
resources/: config.yaml
resources/config/dev/: conf.yaml
resources/config/local/: conf.yaml
resources/config/prod/: conf.yaml
resources/data/: s3_event_mp4.json
resources/sql/: 00-db-init.sql  01-users-table-data-init.sql  02-interviews-table-data-init.sql
resources/sql/information_retrieval/: 00-db-init.sql  02-documents-table-data-init.sql
resources/sql/interview_analyzer/: 00-db-init.sql  01-users-table-data-init.sql  02-interviews-table-data-init.sql  99-table-alterations-collection.sql
src/information_retrieval/: app_lifespan_management.py  config.py  gunicorn.conf.py  main.py
src/information_retrieval/core/: config.py  lifespan.py  logger.py  middleware.py
src/information_retrieval/utils/: file_io.py  files.py  misc.py  standard_logger.py
src/interview_analyzer/: app_lifespan_management.py  gunicorn.conf.py  main.py  pre_startup.py
src/interview_analyzer/utils/: files.py  llm.py
src/serverless/: send_s3_file_to_backend.py
tests/: manual_test_script.py  test_serverless.py
tests/helpers/: bitrate_calculator.py
tests/integration/: conftest.py  test_activities_endpoints.py  test_activity_endpoints.py  test_files_endpoints.py  test_main.py  test_resume_endpoints.py  test_user_endpoints.py  test_users_endpoints.py
tests/resources/resumes/: SelenaResume.docx
(+99 files in other folders)
