# This file was configured by CPA. For additional details: https://github.com/ysawa0/create-python-app
[tool.poetry]
name = "silver"
version = "0.0.1"
description = ""
authors = [
  "Shayaan Jagtap <shayaan.jagtap@gmail.com>"
]
license = ""

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip-string-normalization = false
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
color = true

[tool.isort]
balanced_wrapping = true
include_trailing_comma = true
known_first_party = "silver"
known_third_party = [
#  "boto3",        # Common for AWS
#  "django",       # Common web framework, if used
#  "flask",        # Common web framework, if used
#  "jinja2",       # Common templating engine
#  "matplotlib",   # Common for plotting
#  "numpy",        # Common for numerical operations
#  "pandas",       # Common for data manipulation
#  "pendulum",     # Common for date time
#  "pytest",       # Common for testing
#  "requests",     # Common for HTTP requests
#  "sqlalchemy",   # Common ORM for databases
]
multi_line_output = 3
profile = "black"
line_length = 120

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.5"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
gunicorn = "^21.2.0"
assemblyai = "^0.20.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
boto3 = "^1.34.19"
simpleaichat = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.5.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
